<resources>
    <string name="app_name">ShippingCalculator</string>
    <string name="zero">0</string>
    <string name="baseLB">0</string>
    <string name="totalLBL">0.00</string>
    <string name="addLBL">0.00</string>
    <string name="baseLBL">0.00</string>
    <string name="in_ounces">In ounces</string>
    <string name="weight">Weight of the package</string>
    <string name="inounces">in ounces</string>
    <string name="basecost">Base Cost</string>
    <string name="addedcost">Added Cost</string>
    <string name="totalshippingcost">Total Shipping Cost</string>
    <string name="weightofthepackage">Weight of the Package</string>
</resources>